--- a/DeezerProyecto/app/src/main/res/layout/fragment_playlists_publicas.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_playlists_publicas.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:padding="24dp"
     android:gravity="center"
-    android:padding="16dp"
     android:background="@color/colorFondo">
 
     <Button
@@ -13,15 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Buscar Amigos"
-        android:textColor="@android:color/white"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="@color/colorVerdeSpotify"
-        android:layout_marginBottom="16dp"/>
+        android:textColor="@android:color/white" />
 
     <Button
         android:id="@+id/botonListaAmigos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Lista de Amigos"
-        android:textColor="@android:color/white"
-        android:backgroundTint="@color/colorVerdeSpotify"/>
+        android:text="Mis Amigos"
+        android:backgroundTint="@color/colorGris"
+        android:textColor="@android:color/white" />
 </LinearLayout>
