--- a/DeezerProyecto/app/src/main/res/layout/activity_home.xml
+++ b/DeezerProyecto/app/src/main/res/layout/activity_home.xml
@@ -10,6 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
+    <include
+        android:id="@+id/barraReproduccion"
+        layout="@layout/barra_reproduccion" />
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
