--- a/DeezerProyecto/app/src/main/res/layout/item_amigo_buscar.xml
+++ b/DeezerProyecto/app/src/main/res/layout/item_amigo_buscar.xml
@@ -1,24 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="12dp"
+    android:background="@drawable/fondo_tarjeta"
+    android:gravity="center_vertical"
+    android:layout_marginBottom="8dp">
+
+    <ImageView
+        android:id="@+id/imagenPerfil"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_user"
+        android:contentDescription="Imagen"
+        android:layout_marginEnd="12dp" />
 
     <TextView
-        android:id="@+id/textoCorreo"
+        android:id="@+id/nombreUsuario"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:text="correo@correo.com"
         android:textColor="@android:color/white"
-        android:textSize="16sp" />
+        android:layout_weight="1"
+        android:maxLines="1"
+        android:ellipsize="end" />
 
     <Button
-        android:id="@+id/botonAgregarAmigo"
+        android:id="@+id/botonAgregar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Agregar"
+        android:textAllCaps="false"
         android:textColor="@android:color/white"
-        android:background="@color/colorVerdeSpotify"/>
+        android:enabled="true"/>
 </LinearLayout>
